# module3

./: .gitignore
module3-3.2/travel_policy_agent/: .gcloudignore  __init__.py  corporate_travel_policy.txt  lab_guide.md  main.py  pyproject.toml
module3-3.2/travel_policy_agent/skills/agents-cli/: SKILL.md
module3-3.4/travel_policy_agent_lab/: LAB_GUIDE.md  antigravity_prompts.md
module3-3.4/travel_policy_agent_lab/fixed_travel_policy_agent/travel_policy_agent/: __init__.py  agent.py
module3-3.4/travel_policy_agent_lab/travel_policy_agent/: __init__.py  agent.py  requirements.txt
module3-3.6/travel_policy_challenge_lab/: LAB_GUIDE.md  register-agent.json  spec.md  travel_policy_golden_set.json
module3-3.6/travel_policy_challenge_lab/docs/: corporate_travel_policy.txt
module3-3.6/travel_policy_challenge_lab/skills/agents-cli/: SKILL.md
