[project]
name = "travel-expense-policy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk[http-server]~=0.3.22",
    "aiohttp>=3.13.4",
    "fastapi>=0.139.2",
    "google-adk[gcp]>=2.0.0,<3.0.0",
    "google-genai>=2.12.1",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "requests>=2.34.2",
    "uvicorn>=0.51.0",
]
